--- a/config_spacy.json
+++ b/config_spacy.json
@@ -1,5 +1,5 @@
 {
   "pipeline": "spacy_sklearn",
   "path" : "./models",
-  "data" : "./data/examples/rasa/demo-rasa.json"
+  "data" : "./../data/examples/rasa/training.json"
 }
